# EVEIntelMonitor

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  IntelChannelsListView.cpp  IntelChannelsListView.h  IntelTableView.cpp  IntelTableView.h  MainWindowView.cpp  MainWindowView.h  QTimerPool.cpp  QTimerPool.h  README.md  main.cpp  resources.qrc
Assets/Data/: solarSystems.json
Assets/Images/: app-icon-macos.icns
ConfigBackend/: ConfigBackend.cpp  ConfigBackend.h
EveScout/: TurnurTheraConnections.cpp  TurnurTheraConnections.h
Exceptions/: RefreshTokenInvalidException.h
Generic/: Result.h
Intel/: Intel.cpp  Intel.h  IntelChannel.cpp  IntelChannel.h  Monitor.cpp  Monitor.h  Parser.cpp  Parser.h  PersistentSettings.cpp  PersistentSettings.h  QQueueSizeConstrained.h
QML/: AboutDialog.qml  ClickMenuButton.qml  DeleteCharacterDialog.qml  DialogFrame.qml  MainWindow.qml  SettingsDialog.qml
RoutePlanner/: RoutePlanner.cpp  RoutePlanner.h  ShortestRoute_BFS.cpp  ShortestRoute_BFS.h  SolarSystem.cpp  SolarSystem.h  SolarSystemsMap.cpp  SolarSystemsMap.h
RoutePlanner/Tools/FuzzToJson/: CMakeLists.txt  DbManager.cpp  DbManager.h  main.cpp
SSO/: Auth.cpp  Auth.h  CharacterLocation.cpp  CharacterLocation.h  Manager.cpp  Manager.h  User.cpp  User.h
Utility/: FileDownloader.cpp  FileDownloader.h
